# Alessandraadv

./: .env.example  .gitignore  .~lock.textos.docx#  00_INDICE_DOCUMENTACAO.md  01_plataforma_inteligencia_juridica_walkthrough_phase1_2.md  02_plataforma_inteligencia_juridica_walkthrough_crm.md  03_plataforma_inteligencia_juridica_walkthrough_whatsapp.md  04_plataforma_inteligencia_juridica_walkthrough_legal_ops.md  05_plataforma_inteligencia_juridica_walkthrough_phase4_planning.md  06_plataforma_inteligencia_juridica_walkthrough_portal_cliente.md  07_plataforma_inteligencia_juridica_walkthrough_testes_e2e.md  08_plataforma_inteligencia_juridica_walkthrough_bi_quality_gates.md  09_plataforma_inteligencia_juridica_walkthrough_final.md  10_plataforma_inteligencia_juridica_task_list.md  CONTEUDO_INSTITUCIONAL_CORRETO.md  MANUAL_DE_USO.md  MANUAL_PROJETO.html  MOBILE_RESPONSIVENESS_FIX.md  NAVIGATION_REFINEMENT.md  PRODUCTION_ENV.md  Procfile  QUALITY.md  RAILWAY_DEPLOY_GUIDE.md  README.md  TIMBRADO.docx  WALKTHROUGH_ANTI_HALLUCINATION_SKILLS_SYSTEM.md  analyze_color.py  analyze_docx.py  logs.1768930330382.json  main.py  manage.py  nixpacks.toml  ping_scan.py  populate_articles.py  populate_institutional_content.py  prepare_template.py  publish_launch_article.py  pyproject.toml  pytest.ini  railway.json  (+6 more)
.agent/: QUICK_REFERENCE.md  README.md  rules.md
DOCS/: MANUAL_OPERACIONAL.md
images_projeto_walkthrough/: README.md
scripts/: audit_access.py  bump_rouanet.py  check_dupes.py  check_new_article.py  consolidate_articles.py  create_manus_readonly.py  deploy_agent.py  (+14 more)
(+176 files in other folders)
